# uf2deploy

./: Cargo.toml  test.sh
src/: deploy.rs  main.rs  preset.rs  uf2.rs
