[package]
name = "uf2deploy"
version = "0.2.0"
edition = "2024"
authors = ["nazo6"]
license = "MIT"
repository = "https://github.com/nazo6/uf2deploy"
description = "cargo runner to convert elf to uf2 and deploy to device"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
anyhow = "1.0.97"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
human_bytes = "0.4"
fs_extra = "1.3.0"
indicatif = "0.17.8"
uf2 = "0.1.0"
dunce = "1.0.5"
sysinfo = { version = "0.34.0", default-features = false, features = ["disk"] }
goblin = { version = "0.9.3" }
cli-table = { version = "0.5.0", default-features = false }
